Fixed the menu and image on mobile

--- a/style.css
+++ b/style.css
@@ -83,9 +83,16 @@ nav ul li a:hover {
     cursor: pointer;
 }
 
+.mobile-name-container{
+    display: none;
+
+}
 
 /* MENU - Responsive Styles */
-@media (max-width: 768px) {
+
+@media (max-width: 1240px) {
+
+
     .menu-icon {
         display: block;
     }
@@ -104,6 +111,8 @@ nav ul li a:hover {
         margin: 10px 0;
     }
 }
+
+
 
 /* Section Styles */
 section {
@@ -160,6 +169,7 @@ section {
     left: 20%;
     top: 50%;
     transform: translateY(-50%);
+    padding-right: 5%;
 }
 
 .social-links a i {
@@ -184,7 +194,7 @@ section {
 
 
 /* HOME SECTION - Responsive Design */
-@media (max-width: 768px) {
+@media (max-width: 1240px) {
     section {
         margin-left: 2%;
         margin-right: 2%;
@@ -194,6 +204,7 @@ section {
     .home-flex-container {
         flex-direction: column; /* Stack the image and social links */
         align-items: center; /* Center-align content */
+        width: 100%; /* Full width for smaller screens */
     }
 
     .home-image-section {
@@ -216,6 +227,7 @@ section {
         gap: 20px; /* Add spacing between icons */
         margin-bottom: 0%; /* Add space below the icons */
         padding-bottom: 0%;
+        margin-right: 5%;
 
     }
 
@@ -247,6 +259,15 @@ section {
         gap: 15px; /* Adjust spacing between icons */
     }
 }
+@media (min-width: 820px) {
+    .home-image-section img {
+        width: 65%; /* Slightly larger for very small screens */
+    }
+    .social-links{
+        padding-right: 3%; /* Larger icon size */
+    }
+}
+
 
 
 
